src/test/ui/type-alias-impl-trait/multiple-def-uses-in-one-fn3.stderr
error: defining use generics `[B, A]` differ from previous defining use
  --> $DIR/multiple-def-uses-in-one-fn3.rs:9:63
   |
LL | fn f<A: ToString + Clone, B: ToString + Clone>(a: A, b: B) -> (X<A, B>, X<B, A>) {
   |                                                               ^^^^^^^^^^^^^^^^^^
   |
note: previous defining use with different generics `[A, B]` found here
  --> $DIR/multiple-def-uses-in-one-fn3.rs:9:63
   |
LL | fn f<A: ToString + Clone, B: ToString + Clone>(a: A, b: B) -> (X<A, B>, X<B, A>) {
   |                                                               ^^^^^^^^^^^^^^^^^^

error: defining use generics `[B, A]` differ from previous defining use
  --> $DIR/multiple-def-uses-in-one-fn3.rs:9:1
   |
LL | fn f<A: ToString + Clone, B: ToString + Clone>(a: A, b: B) -> (X<A, B>, X<B, A>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: previous defining use with different generics `[A, B]` found here
  --> $DIR/multiple-def-uses-in-one-fn3.rs:9:1
   |
LL | fn f<A: ToString + Clone, B: ToString + Clone>(a: A, b: B) -> (X<A, B>, X<B, A>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/multiple-def-uses-in-one-fn3.rs:17:9
   |
LL | fn g<A: ToString + Clone, B: ToString + Clone>(a: A, b: B) -> (X<A, B>, X<A, B>) {
   |      -                    - found type parameter
   |      |
   |      expected type parameter
LL |
LL |     (a, b)
   |         ^ expected type parameter `A`, found type parameter `B`
   |
   = note: expected type parameter `A`
              found type parameter `B`
   = note: a type parameter was expected, but a different one was found; you might be missing a type parameter or trait bound
   = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters

error: concrete type differs from previous defining opaque type use
  --> $DIR/multiple-def-uses-in-one-fn3.rs:15:1
   |
LL | fn g<A: ToString + Clone, B: ToString + Clone>(a: A, b: B) -> (X<A, B>, X<A, B>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `[type error]`, got `A`
   |
note: previous use here
  --> $DIR/multiple-def-uses-in-one-fn3.rs:9:1
   |
LL | fn f<A: ToString + Clone, B: ToString + Clone>(a: A, b: B) -> (X<A, B>, X<B, A>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
